# LBPLD-yolov8

./: .gitignore  copy_xlsx.py  export.py  extract_images.py  labelme2yolov8.py  predict.py  readme.md  remove_uesless_img.py  requirements.txt  train.py  val.py  xls_extract.py
datasets_utils/: copy_xlsx.py  extract_images.py  labelme2yolov8.py  remove_uesless_img.py  xls_extract.py
tauri-app/: README.md  package.json
tauri-app/src/: App.vue
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/assets/css/: app.css
