[package]
name = "monster"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "macos-private-api", "api-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1.0.203"
image = "0.25.1"
ndarray = "0.15.6"
ort = "2.0.0-rc.1"
lazy_static = "1.4.0"
base64 = "0.22.1"



[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
